# BGD-Worker

./: .gitignore  .nav  AI_MAINTENANCE.md  CLAUDE.md  build.py  catalog.json  desktop.py  index.html  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
api/: .nav  app.py  deps.py  logging_setup.py  routes_character.py  routes_dialogue.py  routes_models.py  routes_settings.py  routes_synthesis.py
character/: .nav  service.py
contract/: .nav  config.py  errors.py  models.py  ports.py
dialogue/: .nav  importer.py  service.py
docs/: import-voice-model.md
docs/AI-PDS/: v2-00-说明.md  v2-01-新建项目提示词.md  v2-02-迭代提示词.md  v2-03-重构提示词.md
scripts/: benchmark_v4_speed.py  build_runtime.py
scripts/build_runtime/: __init__.py  build.py  constants.py  gpt_sovits.py  packaging.py
storage/: .nav  audio_store.py  json_repository.py  model_store.py  sqlite_repository.py
synthesis/: .nav  emotion_mapper.py  exporter.py  orchestrator.py
tts/: .nav  _download.py  _ffmpeg.py  catalog_client.py  dispatch_engine.py  edge_tts_engine.py  local_engine.py  runtime_installer.py
tts/runtime/: .nav  serve.py
web/: app.js  characters.js  dialogues-form.js  dialogues-render.js  dialogues-synth.js  index.html  models.js  settings.js  style.css
