[project]
name = "npc-voice-gen"
version = "0.1.0"
description = "游戏NPC情感语音生成器，UV + FastAPI 实现"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "edge-tts>=6.1.12",
    "python-multipart>=0.0.12",
    "imageio-ffmpeg>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contract", "character", "dialogue", "synthesis", "storage", "tts", "api"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
